--- a/QuizBattle/src/main/resources/application.properties
+++ b/QuizBattle/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+server.port=1991
+
+
+## MySQL
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/quiz_battle
+spring.datasource.username=root
+spring.datasource.password=1998
+
+
+## Hibernate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
 
