--- a/QuizBattle/src/main/resources/application.properties
+++ b/QuizBattle/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+
+
+spring.jackson.serialization.fail-on-empty-beans=false
+
+
