--- a/QuizBattle/src/main/resources/application.properties
+++ b/QuizBattle/src/main/resources/application.properties
@@ -16,6 +16,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jackson.serialization.fail-on-empty-beans=false
 
 ##common service
-server.servlet.contextPath=/api/v1/
+#server.servlet.contextPath=/api/v1/
 
 
