--- a/QuizBattle/pom.xml
+++ b/QuizBattle/pom.xml
@@ -27,8 +27,20 @@
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+		<!-- 	<dependency>
+			    <groupId>org.springframework.boot</groupId>
+			    <artifactId>spring-boot-starter-security</artifactId>
+			</dependency> -->
+		
 
 
 		<dependency>
@@ -37,11 +49,11 @@
 		</dependency>
 		
 		
-	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-      <dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+      	<dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
-       </dependency>
+       	</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
