Some new demand

--- a/QuizBattle/pom.xml
+++ b/QuizBattle/pom.xml
@@ -68,11 +68,21 @@
 			<optional>true</optional>
 		</dependency>
 		
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.thymeleaf.extras</groupId>
+		    <artifactId>thymeleaf-extras-java8time</artifactId>
+		</dependency>
+		
+		
+		
+
 	</dependencies>
 
 	<build>
