--- a/QuizBattle/src/main/resources/application.properties
+++ b/QuizBattle/src/main/resources/application.properties
@@ -3,9 +3,18 @@ server.port=1991
 
 ## MySQL
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/quiz_battle
+spring.datasource.url=jdbc:mysql://localhost:3306/quiz_battle?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=1998
+
+spring.datasource.sqlScriptEncoding=UTF-8
+
+
+
+
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+server.tomcat.uri-encoding = UTF-8
 
 
 ## Hibernate
@@ -13,8 +22,14 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+
+
+
+
 spring.jackson.serialization.fail-on-empty-beans=false
 
+
+server.servlet.session.timeout=20m
 ##common service
 #server.servlet.contextPath=/api/v1/
 
