--- a/QuizBattle/pom.xml
+++ b/QuizBattle/pom.xml
@@ -38,7 +38,7 @@
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
-		<!-- 	<dependency>
+		<!--<dependency>
 			    <groupId>org.springframework.boot</groupId>
 			    <artifactId>spring-boot-starter-security</artifactId>
 			</dependency> -->
@@ -83,7 +83,11 @@
 		</dependency>
 		
 		
-		
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-mail</artifactId>
+	</dependency>
 	
 		
 
