--- a/QuizBattle/pom.xml
+++ b/QuizBattle/pom.xml
@@ -81,6 +81,12 @@
 		    <groupId>org.thymeleaf.extras</groupId>
 		    <artifactId>thymeleaf-extras-java8time</artifactId>
 		</dependency>
+
+		<dependency>
+		    <groupId>org.springdoc</groupId>
+		    <artifactId>springdoc-openapi-ui</artifactId>
+		    <version>1.5.2</version>
+		</dependency>
 		
 		
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
@@ -89,6 +95,11 @@
 	    <artifactId>spring-boot-starter-mail</artifactId>
 	</dependency>
 	
+		<dependency>
+			 <groupId>com.razorpay</groupId>
+			 <artifactId>razorpay-java</artifactId>
+			 <version>1.3.9</version>
+		</dependency>
 		
 
 	</dependencies>
@@ -103,11 +114,14 @@
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							 
 						</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>Quizbattle</finalName>
 	</build>
 
 </project>
+
