--- a/QuizBattle/src/main/resources/application.properties
+++ b/QuizBattle/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-server.port=1991
+server.port=5000
 
 
 ## MySQL
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#spring.datasource.url=jdbc:mysql://quizmaffia.cqxtvx45nzy2.us-east-2.rds.amazonaws.com:3306/quiz_battle?useUnicode=yes&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=19981998
+
+
 spring.datasource.url=jdbc:mysql://localhost:3306/quiz_battle?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=1998
@@ -33,4 +39,16 @@ server.servlet.session.timeout=20m
 ##common service
 #server.servlet.contextPath=/api/v1/
 
+# multipart 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
 
+
+springdoc.api-docs.path=/api-docs
+# swagger-ui custom path
+springdoc.swagger-ui.path=/api-doc-ui.html
+
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
