--- a/QuizBattle/src/main/resources/application.properties
+++ b/QuizBattle/src/main/resources/application.properties
@@ -4,14 +4,14 @@ server.port=5000
 ## MySQL
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-#spring.datasource.url=jdbc:mysql://quizmaffia.cqxtvx45nzy2.us-east-2.rds.amazonaws.com:3306/quiz_battle?useUnicode=yes&characterEncoding=UTF-8
-#spring.datasource.username=root
-#spring.datasource.password=19981998
-
-
-spring.datasource.url=jdbc:mysql://localhost:3306/quiz_battle?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://quizmaffia.cqxtvx45nzy2.us-east-2.rds.amazonaws.com:3306/quiz_battle?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=1998
+spring.datasource.password=19981998
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/quiz_battle?useUnicode=yes&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=1998
 
 spring.datasource.sqlScriptEncoding=UTF-8
 
