--- a/QuizBattle/src/main/resources/application.properties
+++ b/QuizBattle/src/main/resources/application.properties
@@ -1,19 +1,37 @@
-server.port=5000
+#server.port=5000
 
 
 ## MySQL
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://quizmaffia.cqxtvx45nzy2.us-east-2.rds.amazonaws.com:3306/quiz_battle?useUnicode=yes&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=19981998
 
+spring.datasource.url=jdbc:mysql://localhost:3306/quizmaff_db?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=quizmaffia
+spring.datasource.password=e6unaba3u
+
+
+#spring.datasource.url=jdbc:mysql://quizmaffia.cqxtvx45nzy2.us-east-2.rds.amazonaws.com:3306/quiz_battle?useUnicode=yes&characterEncoding=UTF-8
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/quiz_battle?useUnicode=yes&characterEncoding=UTF-8
 #spring.datasource.username=root
 #spring.datasource.password=1998
 
+
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/quizmaff_db?useUnicode=yes&characterEncoding=UTF-8
+#spring.datasource.username=quizmaffia
+#spring.datasource.password=e6unaba3u
+
+
 spring.datasource.sqlScriptEncoding=UTF-8
+
+
+
+## Hibernate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 
 
@@ -21,15 +39,6 @@ spring.datasource.sqlScriptEncoding=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 server.tomcat.uri-encoding = UTF-8
-
-
-## Hibernate
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-
-
 
 
 spring.jackson.serialization.fail-on-empty-beans=false
