--- a/QuizBattle/pom.xml
+++ b/QuizBattle/pom.xml
@@ -22,7 +22,10 @@
 	
 	<properties>
 		<java.version>1.8</java.version>
+		<maven.test.skip>true</maven.test.skip>
 	</properties>
+
+	<packaging>war</packaging>
 	
 	<dependencies>
 		
